[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
    "poetry-core>=1.0.0",
]

[tool.black]
exclude = '''
/(
  | \.git
  | \.mypy_cache
  | _build
  | build
  | dist
)/
'''
line-length = 79
skip-magic-trailing-comma = true

[tool.constcheck]
filter = true

[tool.constcheck.ignore_from]
"pyaud_plugins/_plugins/audit.py" = [
    'PYCHARM_HOSTED',
    "True",
    "doctest",
    "suppress",
]

[tool.coverage.report]
fail_under = 100

[tool.coverage.run]
omit = [
    "whitelist.py",
    "pyaud_plugins/__main__.py",
]

[tool.poetry]
authors = [
    "jshwi <stephen@jshwisolutions.com>",
]
description = "Plugin package for Pyaud"
keywords = [
    "pyaud",
    "plugins",
    "audit",
    "ci",
    "python",
]
license = "MIT"
name = "pyaud-plugins"
readme = "README.rst"
version = "0.8.0"

[tool.poetry.dependencies]
Sphinx = "^4.3.2"
appdirs = "^1.4.4"
black = ">=21.12,<23.0"
codecov = "^2.1.12"
constcheck = "^0"
coverage = "^6.2"
docformatter = "^1.4"
environs = "^9.4.0"
flynt = ">=0.75,<0.77"
isort = "^5.10.1"
m2r = "^0.2.1"
mistune = "<=0.8.4"
mypy = ">=0.930,<0.972"
object-colors = "^2.0.1"
pipfile-requirements = "^0.3.0"
pylint = "^2.12.2"
pytest = ">=6.2.5,<8.0.0"
pytest-cov = "^3.0.0"
python = "^3.8"
python-dotenv = ">=0.19.2,<0.21.0"
readmetester = ">=1.0.1,<3.0.0"
sphinxcontrib-fulltoc = "^1.2.0"
sphinxcontrib-programoutput = "^0.17"
toml = "^0.10.2"
toml-sort = "^0.20.0"
vulture = "^2.3"
docsig = "^0"

[tool.poetry.dev-dependencies]
bump2version = "^1.0.1"
ipython = "^8.4.0"
pyaud = "^3.13.5"
pytest = ">=6.2.5,<8.0.0"
pytest-randomly = "^3.12.0"
pytest-sugar = "^0.9.5"
pytest-xdist = "^2.5.0"
restview = "^3.0.0"
sphinx-toolbox = "^3.1.2"
tomli-w = "^1.0.0"
templatest = "^0.5.0"

[tool.pyaud.audit]
modules = [
    "toc",
    "whitelist",
    "sort-pyproject",
    "format",
    "format-docs",
    "format-str",
    "imports",
    "typecheck",
    "unused",
    "lint",
    "const",
    "params",
    "test",
    "docs",
]

[tool.pyaud.clean]
exclude = [
    "*.egg*",
    ".mypy_cache",
    ".env",
]

[tool.pyaud.indexing]
exclude = [
    "whitelist.py",
    "conf.py",
]

[tool.pyaud.logging]
disable_existing_loggers = true
version = 1

[tool.pyaud.logging.formatters.standard]
format = "%(asctime)s %(levelname)s %(name)s %(message)s"

[tool.pyaud.logging.handlers.default]
backupCount = 60
class = "logging.handlers.TimedRotatingFileHandler"
filename = "~/.cache/pyaud/log/pyaud.log"
formatter = "standard"
when = "d"

[tool.pyaud.logging.root]
handlers = [
    "default",
]
level = "DEBUG"
propagate = false

[tool.pytest.ini_options]
addopts = [
    "--durations=5",
    "-vv",
    "--color=yes",
    "--cov-report",
    "term-missing",
    "-n",
    "auto"
]
filterwarnings = "ignore::DeprecationWarning"
norecursedirs = [
    "docs",
    "*.egg-info",
    ".git",
    ".mypy_cache",
    ".idea",
]
