[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core>=1.0.0"
]

[tool.black]
exclude = '''
/(
  | \.git
  | \.mypy_cache
  | _build
  | build
  | dist
)/
'''
line-length = 79
skip-magic-trailing-comma = true

[tool.constcheck]
ignore_strings = [
  "store",
  "store_true",
  "utf-8"
]

[tool.constcheck.ignore_from]
"pyaud_plugins/_plugins/audit.py" = [
  "True",
  "doctest",
  "suppress",
  'PYCHARM_HOSTED'
]

[tool.coverage.report]
fail_under = 100

[tool.coverage.run]
omit = [
  "whitelist.py"
]

[tool.deptry]
ignore_obsolete = [
  "Sphinx",
  "black",
  "constcheck",
  "coverage",
  "docformatter",
  "docsig",
  "flynt",
  "isort",
  "mypy",
  "pylint",
  "pytest",
  "pytest-cov",
  "sphinx-markdown-builder",
  "sphinxcontrib-fulltoc",
  "sphinxcontrib-programoutput",
  "toml-sort",
  "vulture"
]

[tool.docsig]
check-class = true
summary = true

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 79
multi_line_output = 3
profile = "black"
use_parentheses = true

[tool.poetry]
authors = [
  "jshwi <stephen@jshwisolutions.com>"
]
description = "Plugin package for Pyaud"
documentation = "https://pyaud-plugins.readthedocs.io/en/latest"
homepage = "https://pypi.org/project/pyaud-plugins/"
keywords = [
  "audit",
  "ci",
  "plugins",
  "pyaud",
  "python"
]
license = "MIT"
maintainers = [
  "jshwi <stephen@jshwisolutions.com>"
]
name = "pyaud-plugins"
readme = "README.rst"
repository = "https://github.com/jshwi/pyaud-plugins"
version = "0.19.1"

[tool.poetry.dependencies]
Sphinx = ">=4.3.2,<8.0.0"
black = ">=21.12,<24.0"
constcheck = "^0"
coverage = ">=6.2,<8.0"
docformatter = "1.7.5"
docsig = ">=0.34.0"
environs = "^9.4.0"
flynt = ">=0.75,<1.1"
gitpython = "^3.1.30"
isort = "^5.10.1"
mypy = ">=0.930,<1.8"
pyaud = ">=6.2.2"
pygments = "^2.16.1"
pylint = ">=2.12.2,<4.0.0"
pytest = "^7.2.0"
pytest-cov = ">=3,<5"
python = "^3.8"
pyyaml = "^6.0"
rich = "^13.5.2"
setuptools = ">=67.2,<70.0"
sphinx-markdown-builder = "^0.5.5"
sphinxcontrib-fulltoc = "^1.2.0"
sphinxcontrib-programoutput = "^0.17"
toml-sort = ">=0.20,<0.24"
tomli = "^2.0.1"
vulture = "^2.3"

[tool.poetry.dev-dependencies]
bump2version = "^1.0.1"
deptry = "^0.12.0"
ipython = "^8.12.2"
pre-commit = "^3.4.0"
pytest = "^7.2.0"
pytest-randomly = "^3.15.0"
pytest-sugar = "^0.9.6"
pytest-xdist = "^3.3.1"
restview = "^3.0.0"
sphinx-immaterial = "^0.11.9"
sphinx-toolbox = "^3.5.0"
templatest = "^0.10.1"
tomli-w = "^1.0.0"

[tool.pyaud]
audit = [
  "about-tests",
  "commit-policy",
  "const",
  "docs",
  "files",
  "format",
  "format-docs",
  "format-str",
  "imports",
  "lint",
  "params",
  "test",
  "typecheck",
  "unused"
]
exclude = '''
(?x)^(
  | docs\/conf\.py
  | whitelist\.py
)$
'''

[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--cov-report=term-missing",
  "--durations=5",
  "-vv"
]
filterwarnings = "ignore::DeprecationWarning"
norecursedirs = [
  ".git",
  ".idea",
  ".mypy_cache",
  ".pytest_cache",
  "docs"
]
